--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -238,7 +238,7 @@ main {
 		@media all and (min-width: 1000px) {
 			max-width: 920px;
 		}
-	
+
 		@media all and (min-width: 1230px) {
 			max-width: 1150px;
 		}
@@ -410,7 +410,7 @@ main {
 	}
 	.body {
 		padding: 0 $padding $padding $padding;
-		font-size: 14px; line-height: 1.42857143;
+		font-size: 15px; line-height: 1.42857143;
 		font-family: $engFont;
 		word-break: break-all;
 		img, iframe {max-width: 100%;}
@@ -426,6 +426,16 @@ main {
 		h5 {font-size: 14px}
 		h6 {font-size: 12px}
 		ul, ol {margin: 15px 0; padding-left: 20px;}
+		@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+			img {zoom: .5;}
+		}
+		.text-left {text-align: left;}
+		.text-center {text-align: center;}
+		.text-right {text-align: right;}
+	}
+	.markdown-body {
+		padding: 0 $padding $padding $padding;
+		font-size: 15px;
 		@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
 			img {zoom: .5;}
 		}
@@ -474,7 +484,7 @@ main {
 				&:hover {background: #333;}
 			}
 			&.prevView, &.nextView {display: none;}
-			
+
 		}
 	}
 
