--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -388,7 +388,7 @@
 	.basic-body {
 		a {word-break: break-all;}
 		img {max-width: 100%;}
-		figure {margin: 0;}
+		figure {margin: 1em 0;}
 		ul, ol {padding-left: 24px;}
 		.text-left {text-align: left;}
 		.text-center {text-align: center;}
