--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -388,7 +388,7 @@
 	}
 
 	.basic-body {
-		font-size: 16px; line-height: 1.72; font-weight: 200;
+		font-size: 15px; line-height: 1.72; font-weight: 200;
 		a {word-break: break-all;}
 		img {max-width: 100%;}
 		figure {margin: 1em 0;}
@@ -451,7 +451,7 @@
 			h1 {font-size: 20px;}
 		}
 
-		.basic-body {font-weight: 400;}
+		.basic-body {font-weight: 400; font-size: 16px;}
 
 		.external-control {display: none;}
 
