--- a/assets/src/scss/fonts.scss
+++ b/assets/src/scss/fonts.scss
@@ -31,13 +31,13 @@
 		url(../../fonts/NotoSans-Medium.otf) format('truetype');
 }
 
-@font-face {
-	font-family: 'Noto Sans';
-	font-style: normal;
-	font-weight: 800;
-	src: local('NotoSansCJKkr-Bold'), local('Noto Sans CJK KR Bold'), local('Noto Sans Bold');
-	src: url(../../fonts/NotoSans-Bold.eot);
-	src: url(../../fonts/NotoSans-Bold.eot?#iefix) format('embedded-opentype'),
-	url(../../fonts/NotoSans-Bold.woff) format('woff'),
-	url(../../fonts/NotoSans-Bold.otf) format('truetype');
-}
+//@font-face {
+//	font-family: 'Noto Sans';
+//	font-style: normal;
+//	font-weight: 800;
+//	src: local('NotoSansCJKkr-Bold'), local('Noto Sans CJK KR Bold'), local('Noto Sans Bold');
+//	src: url(../../fonts/NotoSans-Bold.eot);
+//	src: url(../../fonts/NotoSans-Bold.eot?#iefix) format('embedded-opentype'),
+//	url(../../fonts/NotoSans-Bold.woff) format('woff'),
+//	url(../../fonts/NotoSans-Bold.otf) format('truetype');
+//}
