--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -401,9 +401,21 @@
 		.text-center {text-align: center;}
 		.text-right {text-align: right;}
 		h1,h2,h3,h4,h5,h6 {line-height: 1.38em; font-weight: 600;}
+		iframe {max-width: 100%;}
 	}
 	.markdown-body {
 		font-size: 16px; line-height: 1.72; font-weight: 200;
+	}
+
+	.video-wrap {
+		position: relative; height: 0;
+		padding-bottom: 56.25%; /* 16:9 */
+		padding-top: 25px;
+		iframe {
+			position: absolute;
+			top: 0; left: 0;
+			width: 100%; height: 100%;
+		}
 	}
 
 	.control {
