--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -389,6 +389,9 @@
 
 	.basic-body {
 		font-size: 15px; line-height: 1.72; font-weight: 200;
+
+		&:after {content: ''; display: table; clear: both;}
+
 		a {word-break: break-all;}
 		img {max-width: 100%;}
 		figure {margin: 1em 0;}
@@ -397,11 +400,16 @@
 			margin: 30px 0; display: block; height: 1px;
 			background: #ccc; border: none;
 		}
+		h1,h2,h3,h4,h5,h6 {line-height: 1.38em; font-weight: 600;}
+		iframe {max-width: 100%;}
+
 		.text-left {text-align: left;}
 		.text-center {text-align: center;}
 		.text-right {text-align: right;}
-		h1,h2,h3,h4,h5,h6 {line-height: 1.38em; font-weight: 600;}
-		iframe {max-width: 100%;}
+
+		@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi){
+			img {zoom: .5;}
+		}
 	}
 	.markdown-body {
 		font-size: 16px; line-height: 1.72; font-weight: 200;
