- 이미지 압축 - 글 제목이 없을때 (제목이 `.`) `Untitled article` 이름으로 변경

--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -471,7 +471,10 @@
 			h1 {font-size: 20px;}
 		}
 
-		.basic-body {font-weight: 400; font-size: 16px;}
+		.basic-body {
+			font-weight: 400;
+			//font-size: 13px;
+		}
 
 		.external-control {display: none;}
 
