팝업에서 `min-width` 조정

--- a/assets/src/scss/base.scss
+++ b/assets/src/scss/base.scss
@@ -19,7 +19,10 @@ body {
 	-webkit-text-size-adjust: none;
 }
 a {color: $color-key;}
-main {min-width: 320px;}
+main {
+	min-width: 320px;
+	&.mini-width {min-width: 200px;}
+}
 
 
 
