--- a/assets/src/scss/base.scss
+++ b/assets/src/scss/base.scss
@@ -1,24 +1,25 @@
-$size-large: 1440px;
-$size-mobile-width: 720px;
-
-$color-key: #B31F37;
-
-
 * {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 }
 
-html {padding: 0;}
+html {
+	padding: 0;
+}
 body {
-	margin: 0; padding: 0;
+	margin: 0;
+	padding: 0;
 	font-family: 'Noto Sans', sans-serif;
-	font-size: 14px; color: #111;
+	font-size: 14px;
+	color: #111;
 	line-height: 1.428;
 	-webkit-text-size-adjust: none;
+	background: $color-bg;
 }
-a {color: $color-key;}
+a {
+	color: $color-key;
+}
 main {
 	min-width: 320px;
 	&.mini-width {min-width: 200px;}
