--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,6 +8,10 @@ $font-url: '../assets/fonts';
 
 // color
 $color-key: #b31f37;
+$color-bg: #fafbfc;
 
 
 
+// size
+$size-article: 900px;
+$size-mobile: 640px;
