--- a/src/scss/redgoose.scss
+++ b/src/scss/redgoose.scss
@@ -7,3 +7,5 @@
 @import "components/footer";
 @import "components/index";
 @import "components/article";
+@import "components/about";
+@import "components/popup";
