--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -4,6 +4,7 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: $font-family, sans-serif;
 	font-size: 1rem;
 	line-height: 1.5;
 	color: #111;
@@ -16,4 +17,10 @@ a {
 
 main {
 
+}
+
+
+// container
+.container {
+	margin: 50px 30px 0;
 }
