--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,4 +1,5 @@
 @import "../variables";
+@import "../mixins";
 
 
 // header
@@ -53,7 +54,7 @@
 				padding: 8px 10px;
 				font-size: 13px;
 				text-decoration: none;
-				font-weight: 600;
+				font-weight: 500;
 				letter-spacing: .25px;
 				color: #111;
 			}
