--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,11 +1,18 @@
+@import "../variables";
+
+
 // footer
 .layout-footer {
 	margin: 60px 30px 0;
-	padding: 0 0 20px;
+	padding: 0 0 24px;
 	&__copyright {
 		text-align: center;
 		margin: 0;
 		font-size: 11px;
 		font-weight: 400;
+	}
+
+	@media screen and (max-width: $size-mobile) {
+		margin-top: 50px;
 	}
 }
