--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -9,7 +9,7 @@
 	$item-size: 230px;
 
 	margin: 0 30px;
-	@media screen and (max-width: 768px) {
+	@media screen and (max-width: $size-tablet) {
 		margin-left: 0;
 		margin-right: 0;
 	}
@@ -19,7 +19,7 @@
 		margin: 0 auto;
 	}
 	&__header {
-		margin: -10px 0 0;
+		margin: -10px 0 20px;
 		> h1 {
 			margin: 0;
 			font-size: 30px;
@@ -36,7 +36,6 @@
 
 	// categories
 	.categories {
-		margin: 0 0 20px;
 		&__toggle {
 			display: none;
 		}
@@ -92,11 +91,25 @@
 				text-indent: -9999px;
 			}
 		}
+
+		&.masonry {
+			.articles {
+				&__item {
+					float: none;
+					&.wx2 {
+
+					}
+					&.hx2 {
+
+					}
+				}
+			}
+		}
 	}
 
 	// load more
 	.loadMore {
-		margin: 50px 0 0;
+		margin: 40px 0 0;
 		> a {
 			position: relative;
 			display: block;
@@ -211,7 +224,7 @@
 			}
 		}
 	}
-	@media screen and (max-width: 340px) {
+	@media screen and (max-width: 370px) {
 		$item-size: 108px;
 		&__wrap {
 			width: 320px;
@@ -225,6 +238,19 @@
 				width: $item-size;
 				height: $item-size;
 			}
+		}
+	}
+
+	@media screen and (max-width: $size-mobile) {
+		&__header {
+			margin-top: 20px;
+			padding: 0 20px;
+			> h1 {
+				font-size: 20px;
+			}
+		}
+		&__categories {
+			margin-top: -2px;
 		}
 	}
 }
