--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -107,6 +107,7 @@
 
 	@media screen and (max-width: $size-mobile) {
 		background: #fff;
+		border-bottom: 1px solid #eee;
 
 		&__body {
 			padding: 0;
