--- a/src/scss/redgoose.scss
+++ b/src/scss/redgoose.scss
@@ -1,6 +1,7 @@
 @import "fonts";
 @import "nomalize";
 @import "base";
+@import "animate";
 
 @import "components/header";
 @import "components/footer";
