--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -9,11 +9,13 @@ body {
 	margin: 0;
 	padding: 0;
 	min-width: 320px;
+	background: $color-bg;
+}
+body, input, button {
 	font-family: $font-family, sans-serif;
 	font-size: 1rem;
 	line-height: 1.5;
 	color: #111;
-	background: $color-bg;
 }
 a {
 	color: $color-key;
