--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -2,6 +2,20 @@
 @import "../mixins";
 
 
+@mixin masonry-size($el, $size) {
+	&.masonry {
+		.grid-item {
+			&.wx2 {
+				width: $size * 2
+			}
+			&.hx2 {
+				height: $size * 2;
+			}
+		}
+	}
+}
+
+
 // index
 .index {
 
@@ -44,7 +58,6 @@
 			padding: 0;
 			list-style: none;
 			@include d-flex(center);
-			li {}
 			a {
 				display: block;
 				padding: 4px 6px;
@@ -68,23 +81,26 @@
 			display: table;
 			clear: both;
 		}
-		&__sizer {
+		.grid-sizer {
 			display: none;
 			width: $item-size;
 			height: $item-size;
 		}
-		&__item {
+		.grid-item {
 			float: left;
 			width: $item-size;
 			height: $item-size;
 			padding: $padding;
+			overflow: hidden;
 			a {
 				display: block;
 				height: 100%;
 			}
 			figure {
 				margin: 0;
+				font-size: 0;
 				height: 100%;
+				overflow: hidden;
 				background-size: cover;
 				background-repeat: no-repeat;
 				background-position: 50% 50%;
@@ -93,18 +109,14 @@
 		}
 
 		&.masonry {
-			.articles {
-				&__item {
-					float: none;
-					&.wx2 {
-
-					}
-					&.hx2 {
-
-					}
-				}
+			.grid-sizer {
+				display: block;
+			}
+			.grid-item {
+				float: none;
 			}
 		}
+		@include masonry-size('.articles', $item-size);
 	}
 
 	// load more
@@ -127,8 +139,14 @@
 			display: block;
 			width: 20px;
 		}
+		&-loading {
+			img {
+				-webkit-animation: 2s roty infinite linear;
+				-moz-animation: 2s roty infinite linear;
+				animation: 2s roty infinite linear;
+			}
+		}
 	}
-
 
 	@media screen and (min-width: 1260px) {
 		&__wrap {
@@ -155,15 +173,16 @@
 			margin: 0 - $padding;
 		}
 		.articles {
-			&__sizer {
+			.grid-sizer {
 				width: $item-size;
 				height: $item-size;
 			}
-			&__item {
+			.grid-item {
 				width: $item-size;
 				height: $item-size;
 				padding: $padding;
 			}
+			@include masonry-size('.articles', $item-size);
 		}
 	}
 	@media screen and (max-width: 710px) {
@@ -176,15 +195,81 @@
 			margin: 0 - $padding;
 		}
 		.articles {
-			&__sizer {
+			.grid-sizer {
 				width: $item-size;
 				height: $item-size;
 			}
-			&__item {
+			.grid-item {
 				width: $item-size;
 				height: $item-size;
 				padding: $padding;
 			}
+			@include masonry-size('.articles', $item-size);
+		}
+	}
+	@media screen and (max-width: $size-mobile) {
+		&__header {
+			margin-top: 20px;
+			margin-bottom: 0;
+			padding: 0;
+			> h1 {
+				margin: 0 0 6px 8px;
+				font-size: 20px;
+			}
+		}
+
+		.categories {
+			&__toggle {
+				display: block;
+				width: 100%;
+				font-size: 0;
+				border-radius: 0;
+				background: $color-panel-bg;
+				border: none;
+				height: 44px;
+				&:focus {
+					outline: $border-focus;
+				}
+				> * {
+					display: inline-block;
+					vertical-align: middle;
+				}
+				> img {
+					width: 10px;
+					margin: 0 5px 0 0;
+					transition: transform .3s ease-out;
+				}
+				> span {
+					margin: -1px 0 0;
+					font-size: 13px;
+					font-weight: 500;
+					letter-spacing: .5px;
+				}
+				&-active {
+					> img {
+						transform: rotateX(180deg);
+					}
+				}
+			}
+			&__index {
+				display: none;
+				flex-wrap: wrap;
+				margin: 1px 0 0;
+				padding: 8px 10px 10px;
+				background: $color-panel-bg;
+				li {
+					width: 50%;
+				}
+				a {
+					padding: 8px 5px;
+				}
+				&-active {
+					@include d-flex(center);
+				}
+			}
+		}
+		.articles {
+			margin-top: 18px;
 		}
 	}
 	@media screen and (max-width: 550px) {
@@ -193,14 +278,15 @@
 			width: 414px;
 		}
 		.articles {
-			&__sizer {
+			.grid-sizer {
 				width: $item-size;
 				height: $item-size;
 			}
-			&__item {
+			.grid-item {
 				width: $item-size;
 				height: $item-size;
 			}
+			@include masonry-size('.articles', $item-size);
 		}
 	}
 	@media screen and (max-width: 440px) {
@@ -213,15 +299,16 @@
 			margin: 0 - $padding;
 		}
 		.articles {
-			&__sizer {
+			.grid-sizer {
 				width: $item-size;
 				height: $item-size;
 			}
-			&__item {
+			.grid-item {
 				width: $item-size;
 				height: $item-size;
 				padding: $padding;
 			}
+			@include masonry-size('.articles', $item-size);
 		}
 	}
 	@media screen and (max-width: 370px) {
@@ -230,26 +317,22 @@
 			width: 320px;
 		}
 		.articles {
-			&__sizer {
+			.grid-sizer {
 				width: $item-size;
 				height: $item-size;
 			}
-			&__item {
+			.grid-item {
 				width: $item-size;
 				height: $item-size;
 			}
+			@include masonry-size('.articles', $item-size);
 		}
 	}
-
-	@media screen and (max-width: $size-mobile) {
+	@media screen and (max-width: 320px) {
 		&__header {
-			margin-top: 20px;
-			padding: 0 20px;
-			> h1 {
-				font-size: 20px;
-			}
+			margin-top: 15px;
 		}
-		&__categories {
+		.articles {
 			margin-top: -2px;
 		}
 	}
