--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -92,6 +92,8 @@
 			height: $item-size;
 			padding: $padding;
 			overflow: hidden;
+			-webkit-transition: opacity .8s ease-out;
+			transition: opacity .8s ease-out;
 			a {
 				display: block;
 				height: 100%;
@@ -105,6 +107,10 @@
 				background-repeat: no-repeat;
 				background-position: 50% 50%;
 				text-indent: -9999px;
+			}
+
+			&__hidden {
+				opacity: 0;
 			}
 		}
 
