목록에서 article 열리는 과정 작업

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,5 +1,6 @@
 @import "variables";
 
+
 * {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -20,7 +21,11 @@ body, input, button {
 a {
 	color: $color-key;
 }
-main {}
+main {
+	&.disabled {
+		display: none;
+	}
+}
 
 
 .blind {
