모바일에서 닫기버튼 조정

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -6,6 +6,9 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+html {
+	//touch-action: manipulation;
+}
 body {
 	margin: 0;
 	padding: 0;
